[package]
name = "hekopanda-cli-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
crossbeam-channel = "0.5.2"
ncurses = "5.101.0"
tokio = { version = "1.15.0", features = ["full"] }