[package]
name = "hekopanda"
version = "0.0.2"
edition = "2021"
authors = ["sadnessOjisan <sadness.ojisan@gmail.com>"]
description="へこぱんだファンによるへこぱんだファンのためのへこぱんだファンツール"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
ncurses = "5.101.0"
